# smart-travel-planner

./: .dockerignore  .gitignore  README.txt  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 34c082f27958_initial.py
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: db.py  schemas.py
backend/app/routes/: auth.py  trips.py
backend/app/services/: agent.py  features.py  webhook.py
backend/app/tools/: classify_destination.py  live_conditions.py  rag_search.py
backend/ml/: generate_dataset.py  train.py
backend/prompts/: agent_prompts.py
backend/scripts/: fetch_wikivoyage.py  load_rag.py  split_docs.py  test_email.py
backend/tests/: conftest.py  test_e2e.py  test_retrieval.py  test_schemas.py  test_tools.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Auth.jsx  Chat.jsx  ToolCallList.jsx
frontend/src/services/: api.js
frontend/src/styles/: global.css
